1222025 | Added auth connection and user validation
